[package]
name = "voice"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.3"
neon = "1"
serde_json = "1.0"
lazy_static = "1.4"
parking_lot = "0.12.1"
hound = "3.4.0"
dasp = "0.11.0"